dvwa/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa
  namespace: dvwa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
        - name: dvwa
          image: ghcr.io/digininja/dvwa:latest
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 4280
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 4280
            initialDelaySeconds: 5
            periodSeconds: 10
        - name: mariadb
          image: mariadb:latest
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 3306
              name: mysql
