dvwa/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa
  namespace: dvwa
  annotations: {
    fortiweb-ip: "10.0.0.4",
    fortiweb-login: "fortiweb-login-secret",
    fortiweb-port: "443",
    fortiweb-ctrl-log: "disable",
    virtual-server-ip: "10.0.0.6",
    virtual-server-addr-type: "ipv4",
    virtual-server-interface: "port1",
    server-policy-https-service: "HTTPS",
    server-policy-http-service: "HTTP",
    server-policy-syn-cookie: "enable",
    server-policy-http-to-https: "disable"
  }
spec:
  ingressClassName: fwb-ingress-controller
  tls:
    - secretName: dvwa-tls
      hosts:
        - dvwa.amerintlxperts.com
        - app1.amerintlxperts.com
        - app2.amerintlxperts.com
        - app3.amerintlxperts.com
        - app4.amerintlxperts.com
        - app5.amerintlxperts.com
        - app6.amerintlxperts.com
  rules:
    - host: dvwa.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
    - host: app1.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
    - host: app2.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
    - host: app3.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
    - host: app4.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
    - host: app5.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
    - host: app6.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
    - host: app7.amerintlxperts.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
